objects/Forwarding_Rule__c.object
<CustomObject><fields>
        <fullName>Case_Area_Country_Code__c</fullName>
        <label>Case Area Country Code</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Distributor_Name__c</fullName>
        <label>Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Dommain_Country_Code__c</fullName>
        <label>Domain Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Forwarding_Email_Address__c</fullName>
        <label>Forwarding Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields><fields>
        <fullName>MathWorks_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MathWorks Office</label>
        <type>Checkbox</type>
    </fields><customSettingsType>List</customSettingsType><description>Contains forwarding email addresses</description><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><label>Forwarding Rules</label><visibility>Public</visibility></CustomObject>